# mon-os

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  ai.hex  ai.mod  linker.ld
.github/workflows/: ci.yml
boot/: boot.asm
kernel/: Cargo.toml  x86_64-kernel.json
kernel/.cargo/: config.toml
kernel/src/: ai_action.rs  ai_agent.rs  ai_initrd.rs  ai_link.rs  ai_model.rs  apply_action.rs  bootinfo.rs  gdt.rs  idt.rs  journal.rs  keyboard.rs  main.rs  pci.rs  pic.rs  pmm.rs  ramfs.rs  serial.rs  shell.rs  syscall.rs  task.rs  vga.rs  xhci.rs
scripts/: build.sh  gen-ai-mod.py  run-qemu.sh  run-wsl.ps1  test-smoke.sh
stage2/: stage2.asm
